# docs/swagger.yaml
@@ -44,7 +44,27 @@ definitions:
       role:
         type: string
     type: object
-host: localhost:8080
+  github_com_bengobox_game-stats-api_internal_application_metadata.ContinentDTO:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      slug:
+        type: string
+      world_id:
+        type: string
+    type: object
+  github_com_bengobox_game-stats-api_internal_application_metadata.WorldDTO:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      slug:
+        type: string
+    type: object
+host: localhost:4000
 info:
   contact:
     email: support@swagger.io
@@ -84,6 +104,27 @@ paths:
       summary: Login
       tags:
       - auth
+  /auth/me:
+    get:
+      consumes:
+      - application/json
+      description: Get information about the currently authenticated user.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_bengobox_game-stats-api_internal_application_auth.UserDTO'
+        "401":
+          description: unauthorized
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Get Current User
+      tags:
+      - auth
   /auth/refresh:
     post:
       consumes:
@@ -110,6 +151,53 @@ paths:
       summary: Refresh Token
       tags:
       - auth
+  /geographic/continents:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of all geographic continents.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_bengobox_game-stats-api_internal_application_metadata.ContinentDTO'
+            type: array
+      summary: List Continents
+      tags:
+      - geographic
+  /geographic/worlds:
+    get:
+      consumes:
+      - application/json
+      description: Get a list of all geographic worlds.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_bengobox_game-stats-api_internal_application_metadata.WorldDTO'
+            type: array
+      summary: List Worlds
+      tags:
+      - geographic
+  /health:
+    get:
+      description: Get the health status of the API.
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Health Check
+      tags:
+      - system
 securityDefinitions:
   BearerAuth:
     in: header
